kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - name: app
          image: sveshnikov/app:latest
          ports:
          - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          readinessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - weather-app
            topologyKey: kubernetes.io/hostname
      nodeSelector:
        node-role.kubernetes.io/worker: ""
