kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: weather-app
spec:
  type: NodePort
  selector:
    app: weather-app
  ports:
  - port: 80
    targetPort: 8000
