kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app
  namespace: weather-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - weather-app.local
    secretName: weather-app-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: weather-app
            port:
              number: 80
